--- a/index.html
+++ b/index.html
@@ -5,17 +5,17 @@
 		<link rel="icon" href="/frontend/favicon.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		
-		<link rel="modulepreload" href="/frontend/_app/immutable/entry/start.D48qBOUb.js">
-		<link rel="modulepreload" href="/frontend/_app/immutable/chunks/entry.BeL2vIM6.js">
+		<link rel="modulepreload" href="/frontend/_app/immutable/entry/start.C-r3_kgZ.js">
+		<link rel="modulepreload" href="/frontend/_app/immutable/chunks/entry.0b3kB-V-.js">
 		<link rel="modulepreload" href="/frontend/_app/immutable/chunks/scheduler.Cewbzyqj.js">
-		<link rel="modulepreload" href="/frontend/_app/immutable/entry/app.D5tlHz_Q.js">
+		<link rel="modulepreload" href="/frontend/_app/immutable/entry/app.BOhilNy3.js">
 		<link rel="modulepreload" href="/frontend/_app/immutable/chunks/index.DdpG_mpN.js">
 	</head>
 	<body data-sveltekit-preload-data="hover">
 		<div style="display: contents">
 			<script>
 				{
-					__sveltekit_5yrty2 = {
+					__sveltekit_p53bo9 = {
 						base: "/frontend",
 						assets: "/frontend"
 					};
@@ -23,8 +23,8 @@
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("/frontend/_app/immutable/entry/start.D48qBOUb.js"),
-						import("/frontend/_app/immutable/entry/app.D5tlHz_Q.js")
+						import("/frontend/_app/immutable/entry/start.C-r3_kgZ.js"),
+						import("/frontend/_app/immutable/entry/app.BOhilNy3.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element);
 					});
