--- a/index.html
+++ b/index.html
@@ -5,17 +5,17 @@
 		<link rel="icon" href="/frontend/favicon.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		
-		<link rel="modulepreload" href="/frontend/_app/immutable/entry/start.ncO7aPB2.js">
-		<link rel="modulepreload" href="/frontend/_app/immutable/chunks/entry.234ktlQ9.js">
+		<link rel="modulepreload" href="/frontend/_app/immutable/entry/start.ByTuD742.js">
+		<link rel="modulepreload" href="/frontend/_app/immutable/chunks/entry.CzuM-b40.js">
 		<link rel="modulepreload" href="/frontend/_app/immutable/chunks/scheduler.Cewbzyqj.js">
-		<link rel="modulepreload" href="/frontend/_app/immutable/entry/app.D0uyyaJL.js">
+		<link rel="modulepreload" href="/frontend/_app/immutable/entry/app.D2zEKVq6.js">
 		<link rel="modulepreload" href="/frontend/_app/immutable/chunks/index.DdpG_mpN.js">
 	</head>
 	<body data-sveltekit-preload-data="hover">
 		<div style="display: contents">
 			<script>
 				{
-					__sveltekit_1e0y5tp = {
+					__sveltekit_1o4kcot = {
 						base: "/frontend",
 						assets: "/frontend"
 					};
@@ -23,8 +23,8 @@
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("/frontend/_app/immutable/entry/start.ncO7aPB2.js"),
-						import("/frontend/_app/immutable/entry/app.D0uyyaJL.js")
+						import("/frontend/_app/immutable/entry/start.ByTuD742.js"),
+						import("/frontend/_app/immutable/entry/app.D2zEKVq6.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element);
 					});
