--- a/index.html
+++ b/index.html
@@ -2,29 +2,29 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
-		<link rel="icon" href="/frontend/favicon.png" />
+		<link rel="icon" href="/biggbell/favicon.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		
-		<link rel="modulepreload" href="/frontend/_app/immutable/entry/start.ByTuD742.js">
-		<link rel="modulepreload" href="/frontend/_app/immutable/chunks/entry.CzuM-b40.js">
-		<link rel="modulepreload" href="/frontend/_app/immutable/chunks/scheduler.Cewbzyqj.js">
-		<link rel="modulepreload" href="/frontend/_app/immutable/entry/app.D2zEKVq6.js">
-		<link rel="modulepreload" href="/frontend/_app/immutable/chunks/index.DdpG_mpN.js">
+		<link rel="modulepreload" href="/biggbell/_app/immutable/entry/start.DMZI8uyh.js">
+		<link rel="modulepreload" href="/biggbell/_app/immutable/chunks/entry.NtkHe0jY.js">
+		<link rel="modulepreload" href="/biggbell/_app/immutable/chunks/scheduler.Cewbzyqj.js">
+		<link rel="modulepreload" href="/biggbell/_app/immutable/entry/app.B-3wxfq9.js">
+		<link rel="modulepreload" href="/biggbell/_app/immutable/chunks/index.DdpG_mpN.js">
 	</head>
 	<body data-sveltekit-preload-data="hover">
 		<div style="display: contents">
 			<script>
 				{
-					__sveltekit_1o4kcot = {
-						base: "/frontend",
-						assets: "/frontend"
+					__sveltekit_190o7bv = {
+						base: "/biggbell",
+						assets: "/biggbell"
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("/frontend/_app/immutable/entry/start.ByTuD742.js"),
-						import("/frontend/_app/immutable/entry/app.D2zEKVq6.js")
+						import("/biggbell/_app/immutable/entry/start.DMZI8uyh.js"),
+						import("/biggbell/_app/immutable/entry/app.B-3wxfq9.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element);
 					});
