--- a/index.html
+++ b/index.html
@@ -5,17 +5,17 @@
 		<link rel="icon" href="/biggbell/favicon.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		
-		<link rel="modulepreload" href="/biggbell/_app/immutable/entry/start.DMZI8uyh.js">
-		<link rel="modulepreload" href="/biggbell/_app/immutable/chunks/entry.NtkHe0jY.js">
+		<link rel="modulepreload" href="/biggbell/_app/immutable/entry/start.CYaoiYiW.js">
+		<link rel="modulepreload" href="/biggbell/_app/immutable/chunks/entry.DfBrSnW4.js">
 		<link rel="modulepreload" href="/biggbell/_app/immutable/chunks/scheduler.Cewbzyqj.js">
-		<link rel="modulepreload" href="/biggbell/_app/immutable/entry/app.B-3wxfq9.js">
+		<link rel="modulepreload" href="/biggbell/_app/immutable/entry/app.peu0ta7a.js">
 		<link rel="modulepreload" href="/biggbell/_app/immutable/chunks/index.DdpG_mpN.js">
 	</head>
 	<body data-sveltekit-preload-data="hover">
 		<div style="display: contents">
 			<script>
 				{
-					__sveltekit_190o7bv = {
+					__sveltekit_1os1qkz = {
 						base: "/biggbell",
 						assets: "/biggbell"
 					};
@@ -23,8 +23,8 @@
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("/biggbell/_app/immutable/entry/start.DMZI8uyh.js"),
-						import("/biggbell/_app/immutable/entry/app.B-3wxfq9.js")
+						import("/biggbell/_app/immutable/entry/start.CYaoiYiW.js"),
+						import("/biggbell/_app/immutable/entry/app.peu0ta7a.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element);
 					});
