--- a/index.html
+++ b/index.html
@@ -5,17 +5,17 @@
 		<link rel="icon" href="/biggbell/favicon.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		
-		<link rel="modulepreload" href="/biggbell/_app/immutable/entry/start.BP6aM4Jm.js">
-		<link rel="modulepreload" href="/biggbell/_app/immutable/chunks/entry.GY4-ITw3.js">
-		<link rel="modulepreload" href="/biggbell/_app/immutable/chunks/scheduler.Cs0xm5t1.js">
-		<link rel="modulepreload" href="/biggbell/_app/immutable/entry/app.Mq9jnTNd.js">
-		<link rel="modulepreload" href="/biggbell/_app/immutable/chunks/index.CL-e-hTs.js">
+		<link rel="modulepreload" href="/biggbell/_app/immutable/entry/start.CdDALr-i.js">
+		<link rel="modulepreload" href="/biggbell/_app/immutable/chunks/entry.DZeO4DiW.js">
+		<link rel="modulepreload" href="/biggbell/_app/immutable/chunks/scheduler.DypdDQBO.js">
+		<link rel="modulepreload" href="/biggbell/_app/immutable/entry/app.5ZqgUn5a.js">
+		<link rel="modulepreload" href="/biggbell/_app/immutable/chunks/index.D-WfMRvz.js">
 	</head>
 	<body data-sveltekit-preload-data="hover">
 		<div style="display: contents">
 			<script>
 				{
-					__sveltekit_iqzkup = {
+					__sveltekit_1jvy6nn = {
 						base: "/biggbell",
 						assets: "/biggbell"
 					};
@@ -23,8 +23,8 @@
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("/biggbell/_app/immutable/entry/start.BP6aM4Jm.js"),
-						import("/biggbell/_app/immutable/entry/app.Mq9jnTNd.js")
+						import("/biggbell/_app/immutable/entry/start.CdDALr-i.js"),
+						import("/biggbell/_app/immutable/entry/app.5ZqgUn5a.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element);
 					});
